# multi_map_navigation_ros1

./: .gitignore  README.md
src/multi_map_navigator/: CMakeLists.txt  my_wormholes.db  package.xml
src/multi_map_navigator/action/: NavigateBetweenMaps.action
src/multi_map_navigator/include/multi_map_navigator/: db_interface.hpp  map_manager.hpp  nav_controller.hpp
src/multi_map_navigator/launch/: move_base.launch  my_navigation.launch  my_world_loader.launch
src/multi_map_navigator/maps/: room_a.pgm  room_a.yaml  room_b.pgm  room_b.yaml
src/multi_map_navigator/scripts/: db_init.py
src/multi_map_navigator/src/: action_client.cpp  action_server.cpp  db_interface.cpp  map_manager.cpp  nav_controller.cpp
src/multi_map_navigator/world/: room_a.world  room_b.world
src/multi_map_navigator/world/Room_A/: model.config  model.sdf
src/multi_map_navigator/world/Room_B/: model.config  model.sdf
